Address review: drop timing assertion, use threadId, clarify latch check